1999-07-30  Jeff Hobbs  <hobbs@scriptics.com>

	* generic/tclInt.decls: added declaractions necessary for the
	Tcl test code to work wth stubs [Bug: 2445]

1999-07-30    <redman@scriptics.com>

	* win/tclWinPipe.c:
	* win/Makefile.in: Fixing launching of 16-bit apps on Win9x from
	wish.  The command line was primed with tclpip82.dll, but it was
	ignored.  Fixed that, then fixed the gmake makefile to build
	tclpip82.dll as an executable.

	* win/tclWinSock.c: Applied small patch to get thread-specific
	data after initializing the socket driver.

	* unix/tclUnixThrd.c: Applied patch to fix threads on Irix 6.5.
	Patch from James Dennett.  [Bug: 2450]

	* tests/info.test: Enable test for tclParse.c change (info
	complete).
	
1999-07-30    <hobbs@scriptics.com>

	* tclIO.c: added fix for Kupries' trf patch [Bug: 2386]

	* tclParse.c: fixed bug in info complete regarding nested square
	brackets [Bug: 2382, 2466]
	
1999-07-29    <redman@scriptics.com>

	* win/tclWinChan.c: Allow tcl to open CON and NUL, even for std
	channels.  Checking for bad/unusable std channels was moved to Tk
	since its only purpose was to check whether to use the Tk Console
	Window for the std channels.  [Bug: 2393 2392 2209 2458]

	* unix/mkLinks.tcl: Applied patch to avoid linking pack.n to
	pack-old.n.  Patch from Don Porter. [Bug: 2469]

	* doc/Encoding.n: Applied patch to fix typo in .SH NAME line.
	Patch from Don Porter.  [Bug: 2451]
	
	* win/tclWinSock.c:  Free Win32 Event handles when destroying
	the socket helper thread.

1999-07-28    <jenn@scriptics.com>

	* tests/tcltest.test:
	* library/tcltest1.0/tcltest.tcl: Fixed the condition under which
	::tcltest::PrintError had an infinite loop problem and added a
	test case for it.  Added an optional argument to
	::tcltest::getMatchingFiles telling it where to search for test
	files. 

1999-07-27    <redman@scriptics.com>

	* tools/tclSplash.bmp:  Updated Windows installer bitmap
	to ready Tcl/Tk Version 8.2.
